force-app/main/default/objects/Opportunity/fields/Capacidad_Deseada__c.field-meta.xml
<CustomField>
    <fullName>Capacidad_Deseada__c</fullName>
    <label>Capacidad Deseada</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>