force-app/main/default/objects/Opportunity/fields/Numero_de_Serie_de_Tanque__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Serie_de_Tanque__c</fullName>
    <formula>BLANKVALUE( Tanque_Asociado__r.Numero_de_Serie__c , &quot;N/A&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Número de serie del tanque asociado directamente en el registro de Oportunidad</inlineHelpText>
    <label>Número de Serie de Tanque</label>
    <type>Text</type>
</CustomField>