force-app/main/default/objects/Opportunity/fields/Numero_de_Serie_del_Tanque__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Serie_del_Tanque__c</fullName>
    <formula>IF(NOT(ISBLANK(Tanque_Asociado__c)), Tanque_Asociado__r.Numero_de_Serie__c, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Número de serie del tanque asociado a la oportunidad.</inlineHelpText>
    <label>Número de Serie del Tanque</label>
    <type>Text</type>
</CustomField>