force-app/main/default/objects/Opportunity/fields/Pedido_Asociado__c.field-meta.xml
<CustomField>
    <fullName>Pedido_Asociado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>El pedido especial asociado a esta oportunidad cuando no hay un tanque disponible.</inlineHelpText>
    <label>Pedido Asociado</label>
    <referenceTo>Pedido__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>