force-app/main/default/objects/Opportunity/fields/Tanque_Asociado__c.field-meta.xml
<CustomField>
    <fullName>Tanque_Asociado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>El tanque industrial específico asociado a esta oportunidad.</inlineHelpText>
    <label>Tanque Asociado</label>
    <referenceTo>Tanque__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>