force-app/main/default/objects/Opportunity/validationRules/Opportunity_One_Association.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_One_Association</fullName>
    <active>true</active>
    <description>Impide que una oportunidad tenga un Tanque_Asociado__c y un Pedido_Asociado__c al mismo tiempo.</description>
    <errorConditionFormula>NOT(ISBLANK(Tanque_Asociado__c)) &amp;&amp; NOT(ISBLANK(Pedido_Asociado__c))</errorConditionFormula>
    <errorMessage>Una Oportunidad no puede tener un Tanque Asociado y un Pedido Asociado al mismo tiempo. Por favor, asegure que solo uno de los campos esté relleno.</errorMessage>
</ValidationRule>